working on errant

--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/armin/Desktop/Projects/NLP/NLP-project/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     }
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,20 +58,12 @@
    "outputs": [],
    "source": [
     "for sentence in df_unique['input']:\n",
-    "    sample = df_unique.sample(6)\n",
+    "    sample = df_unique.sample(2)\n",
     "    input_text = f\"\"\" I will give you a sentence which has grammatical errors. You have to give me the corrected version of that sentence. Look at this example:\n",
     "    wrong sentence 1: {sample['input'].iloc[0]}\n",
     "    The corrected version is: {sample['target'].iloc[0]}\n",
     "    wrong sentence 2: {sample['input'].iloc[1]}\n",
     "    The corrected version is: {sample['target'].iloc[1]}\n",
-    "    wrong sentence 3: {sample['input'].iloc[2]}\n",
-    "    The corrected version is: {sample['target'].iloc[2]}\n",
-    "    wrong sentence 4: {sample['input'].iloc[3]}\n",
-    "    The corrected version is: {sample['target'].iloc[3]}\n",
-    "    wrong sentence 5: {sample['input'].iloc[4]}\n",
-    "    The corrected version is: {sample['target'].iloc[4]}\n",
-    "    wrong sentence 6: {sample['input'].iloc[5]}\n",
-    "    The corrected version is: {sample['target'].iloc[5]}\n",
     "    Now you have to correct the following sentence:\n",
     "    {sentence}\n",
     "    \"\"\"\n",
@@ -82,7 +76,8 @@
     "        pad_token_id=tokenizer.eos_token_id, \n",
     "        do_sample=True, \n",
     "        no_repeat_ngram_size=3, \n",
-    "        max_length=len(input_text) + len(sentence) + 10,\n",
+    "        # max_length=len(input_text) + len(sentence) + 10,\n",
+    "        max_length=len(input_text),\n",
     "        )\n",
     "    generated_text = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
     "    print(f\"Original sentence: {sentence}\")\n",
