changing strategy from epoch to steps

--- a/preprocess_eval.ipynb
+++ b/preprocess_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,168 +11,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('data/test_with_predictions.csv')"
+    "data = pd.read_csv('data/updated_clean_tmu.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>source</th>\n",
-       "      <th>output</th>\n",
-       "      <th>explanation</th>\n",
-       "      <th>prompt</th>\n",
-       "      <th>labels</th>\n",
-       "      <th>input_ids</th>\n",
-       "      <th>attention_mask</th>\n",
-       "      <th>predicted_output</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Such situation is a major progress from the an...</td>\n",
-       "      <td>Such a situation is a major progress from the ...</td>\n",
-       "      <td>Corrected 'progress' to 'major'. Corrected 'ti...</td>\n",
-       "      <td>Such situation is a major progress from the an...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
-       "      <td>Such situation is a major progress from the an...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>After a country was just founded, some immatur...</td>\n",
-       "      <td>After the country was founded, some immature p...</td>\n",
-       "      <td>Corrected 'policy' to 'led'. Corrected 'a' to ...</td>\n",
-       "      <td>After a country was just founded, some immatur...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
-       "      <td>After a country was just founded, some immatur...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>When I have such feelings, I will feel that I ...</td>\n",
-       "      <td>When I have such feelings, I feel that I do no...</td>\n",
-       "      <td>Corrected 'to' to 'human'. Corrected 'pet' to ...</td>\n",
-       "      <td>When I have such feelings, I will feel that I ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
-       "      <td>When I have such feelings, I will feel that I ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Following are the more specific explanations.</td>\n",
-       "      <td>The following are the more specific explanations.</td>\n",
-       "      <td>Added words for clarity or grammatical correct...</td>\n",
-       "      <td>Following are the more specific explanations. ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
-       "      <td>Following are the more specific explanations. ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Bad mood cannot give them a longer time of life.</td>\n",
-       "      <td>A bad mood cannot give them a longer time of l...</td>\n",
-       "      <td>Corrected 'mood' to 'bad'. Corrected 'give' to...</td>\n",
-       "      <td>Bad mood cannot give them a longer time of lif...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[    0     0     0     0     0     0     0    ...</td>\n",
-       "      <td>[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...</td>\n",
-       "      <td>Bad mood cannot give them a longer time of lif...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                              source  \\\n",
-       "0  Such situation is a major progress from the an...   \n",
-       "1  After a country was just founded, some immatur...   \n",
-       "2  When I have such feelings, I will feel that I ...   \n",
-       "3      Following are the more specific explanations.   \n",
-       "4   Bad mood cannot give them a longer time of life.   \n",
-       "\n",
-       "                                              output  \\\n",
-       "0  Such a situation is a major progress from the ...   \n",
-       "1  After the country was founded, some immature p...   \n",
-       "2  When I have such feelings, I feel that I do no...   \n",
-       "3  The following are the more specific explanations.   \n",
-       "4  A bad mood cannot give them a longer time of l...   \n",
-       "\n",
-       "                                         explanation  \\\n",
-       "0  Corrected 'progress' to 'major'. Corrected 'ti...   \n",
-       "1  Corrected 'policy' to 'led'. Corrected 'a' to ...   \n",
-       "2  Corrected 'to' to 'human'. Corrected 'pet' to ...   \n",
-       "3  Added words for clarity or grammatical correct...   \n",
-       "4  Corrected 'mood' to 'bad'. Corrected 'give' to...   \n",
-       "\n",
-       "                                              prompt  \\\n",
-       "0  Such situation is a major progress from the an...   \n",
-       "1  After a country was just founded, some immatur...   \n",
-       "2  When I have such feelings, I will feel that I ...   \n",
-       "3  Following are the more specific explanations. ...   \n",
-       "4  Bad mood cannot give them a longer time of lif...   \n",
-       "\n",
-       "                                              labels  \\\n",
-       "0  [    0     0     0     0     0     0     0    ...   \n",
-       "1  [    0     0     0     0     0     0     0    ...   \n",
-       "2  [    0     0     0     0     0     0     0    ...   \n",
-       "3  [    0     0     0     0     0     0     0    ...   \n",
-       "4  [    0     0     0     0     0     0     0    ...   \n",
-       "\n",
-       "                                           input_ids  \\\n",
-       "0  [    0     0     0     0     0     0     0    ...   \n",
-       "1  [    0     0     0     0     0     0     0    ...   \n",
-       "2  [    0     0     0     0     0     0     0    ...   \n",
-       "3  [    0     0     0     0     0     0     0    ...   \n",
-       "4  [    0     0     0     0     0     0     0    ...   \n",
-       "\n",
-       "                                      attention_mask  \\\n",
-       "0  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...   \n",
-       "1  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...   \n",
-       "2  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...   \n",
-       "3  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...   \n",
-       "4  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0...   \n",
-       "\n",
-       "                                    predicted_output  \n",
-       "0  Such situation is a major progress from the an...  \n",
-       "1  After a country was just founded, some immatur...  \n",
-       "2  When I have such feelings, I will feel that I ...  \n",
-       "3  Following are the more specific explanations. ...  \n",
-       "4  Bad mood cannot give them a longer time of lif...  "
+       "(3132, 3)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
